--- a/agency/css/style.css
+++ b/agency/css/style.css
@@ -126,21 +126,21 @@ blockquote > cite {font-weight: 400;font-size: 14px;display: block;}
 
 /* background color */
 .bg-black{background: #000000;}
-.bg-dark {background-color: #1d1d21 !important;}
+.bg-dark {background-color: #919699 !important;}
 .bg-blue {background-color: #03a9f5;}
 .bg-pink {background-color: #f033b5;}
 .bg-purple {background-color: #9556f5;}
 
 .gradient-bg1{
-    background: #0095da;
+    background: #919699;
     /* background: -moz-linear-gradient(left, #3264f5 2%, #7004bc 82%);
     background: -webkit-linear-gradient(left, #3264f5 2%,#7004bc 82%);
-    background: linear-gradient(to right, #0095DA,#7004bc); */
-    
+    background: linear-gradient(to right, #919699,#7004bc); */
+
 }
 
 .gradient-bg2{
-    background: #0095da;
+    background: #919699;
     /* background: -moz-linear-gradient(left, #237afe 2%, #03a9f5 82%);
     background: -webkit-linear-gradient(left, #237afe 2%, #03a9f5 82%);
     background: linear-gradient(to right, #237afe 2%, #03a9f5 82%); */
@@ -301,7 +301,7 @@ header a.logo img {max-width: 150px;}
 /* nav top default */
 
 .navbar-top-default{
-    position: initial;
+    position: relative;
     top: 0;
     z-index: 98;
     overflow: hidden;
@@ -643,7 +643,7 @@ header a.logo img {max-width: 150px;}
     width: 100%;
     overflow: hidden;
     bottom: 0px;
-    color: rgb(255, 255, 255);
+    color: #212529;
     display: flex;
     align-items: center;
     justify-content: flex-start;
@@ -2856,7 +2856,7 @@ input.inputerror, textarea.inputerror, select.inputerror {
     position: fixed;
     top: 0;
     bottom: 0;
-    background: #0095DA;
+    background: #919699;
     z-index: 800;
     text-align: center;
     overflow: hidden;
